--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -1,5 +1,15 @@
+name: Qodana
+on:
+  workflow_dispatch:
+  pull_request:
+  push:
+    branches:
+      - main
+      - dev
+      - orange23333-dev-temp
+      - 'releases/*'
 
-
+jobs:
   qodana:
     runs-on: ubuntu-latest
     steps:
